--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-    "display_name": "Name Displayed in SillyTavern",
+    "display_name": "DreamGen's Lucid Support",
     "loading_order": 9,
     "requires": [],
     "optional": [],
     "js": "index.js",
     "css": "style.css",
-    "author": "yourNameHere",
-    "version": "1.0.0",
-    "homePage": "yourUrlHere"
+    "author": "Martin Javier Di Liscia",
+    "version": "0.1.0",
+    "homePage": "Pending"
 }
